Introduced Phoenix and HBase level compactors and added more tests